[package]
name = "rustagious"
version = "0.1.0"
authors = ["Olivia Brode-Roger <nibr@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
rayon = "1.4.1"

[profile.release]
debug = true
